Chnaged Desgin for more simple approach

--- a/index.html
+++ b/index.html
@@ -3,35 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/style.css">
+    <title>Maximilian Bosch Full Stack Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="./assets/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap" rel="stylesheet">
-        <title>Maximilian Bosch - Portfolio</title>
 </head>
 <body>
-    <header class="header">
-    <a href="" class="logo">Logo</a>
-        <nav class="navbar">
-            <a href="#">About Me</a>
-            <a href="#">My Work</a>
-            <a href="#">Get in Touch</a>
-            <a href="#">A Little More</a>
-        </nav>
-    </header>
-    <video id="background-video" autoplay muted loop>
-        <source src="./assets/pexels_videos_2818564 (2160p).mp4" type="video/mp4">
-    </video>
-    <section id="about-me" class="about-me">
-        <h2>About Me</h2>
-        <p>
-            Hey, I'm Max, and this is my portfolio. I am a very driven and passionate full-stack developer. If you're looking for a versatile and driven developer who excels in challenging environments, I'm eager to connect with you and see what we can achieve.
-        </p>
-    </section>
-    <div>
-        <h1><span>D</span><span>e</span><span>v</span><span>F</span><span>o</span><span>l</span><span>i</span><span>o</span>
+<div class="container">
+    <nav>
+        <div class="logo">folio<b>.</b></div>
+        <ul class="navItems">
+            <li><a href="#">home</a></li>
+            <li><a href="#">about</a></li>
+            <li><a href="#">skills</a></li>
+            <li><a href="#">Media</a></li>
+        </ul>
+        <div class="links">
+            <li><a href="#"><i class = "fab fa-linkedin"></i></a></li>
+            <li><a href="#"><i class = "fab fa-instagram"></i></a></li>
+            <li><a href="#"><i class = "fab fa-twitter"></i></a></li>
+        </div>
+    </nav>
+
+    <div class="wrapper">
+        <div class="cols cols0">
+            <span class="topline">Hello</span>
+            <h1>I'm <span class="mulitText">Coder</span></h1>
+            <p>"In the heart of the bustling city, life moves at a relentless pace. People rush to their destinations,."</p>
+        <div class="btns">
+            <button>Download Resume</button>
+            <button>Hire Me</button>
+        </div>
     </div>
-
-
-   
+</div>
+</body>
+</html>
+  
 
         
 
