Added purple bubble

--- a/index.html
+++ b/index.html
@@ -29,12 +29,19 @@
             <span class="topline">Hello</span>
             <h1>I'm <span class="mulitText">Coder</span></h1>
             <p>"In the heart of the bustling city, life moves at a relentless pace. People rush to their destinations,."</p>
-        <div class="btns">
-            <button>Download Resume</button>
-            <button>Hire Me</button>
+            <div class="btns">
+                <button>Download Resume</button>
+                <button>Hire Me</button>
+            </div>
+            <div class="cols cols1">
+                <div class="imgbox">
+                    <img src="" id="splash">
+                    <img src="./assets/IMG_1216.jpg">
+            </div>
+
+            </div>
         </div>
     </div>
-</div>
 </body>
 </html>
   
