--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> My First DEvFolio</title>
-
     <link rel="stylesheet" href="./assets/style.css">
-
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
@@ -35,7 +33,7 @@
         
         <div class="text-animate">
             <h3> A FullStack Developper</h3>
-            <p>Embarking on my journey to become a Web Developer is a thrilling challenge. It's continuous learning, problem-solving, and creativity. From mastering programming languages to building innovative solutions. It's will be marked by growth, collaboration, and the exciting opportunities.</p>
+            <p>Embarking on my journey to become a Web Developer is a thrilling challenge. It's continuous learning, problem-solving, and creativity. From mastering programming languages to building innovative solutions. It has been marked with growth, collaboration, and exciting opportunities.</p>
             </p>
             <div class="btn-box">
                 <a href="#" class="btn">Hire Me</a>
@@ -63,7 +61,7 @@
     </div>
     <div class="about-content">
         <h3>FullStack Developper!</h3>
-        <p>Transitioning from the military to a full-stack developer, I blend discipline with tech expertise. Collaborative by nature, I'm passionate about coding, and my love for soccer reflects in my teamwork. Beyond work, family is my anchor, and I find joy in cars, exploring their designs and mechanics. This dual love for code and camaraderie fuels my commitment to excellence in both professional and personal realms. I am always eager for new projects and opportunities, I thrive on challenges. A quote i love to live by " Humans greatest super power is the ability to learn" </p>
+        <p>Transitioning from the military to a full-stack developer, I blend discipline with tech expertise. I am passionate about coding, my strength of working in a team enviroment stems from my love of soccer and team sports. Beyond work, family is my anchor, and I find joy in cars, sports and the outdoors. This dual love for code and camaraderie fuels my commitment to excellence in both professional and personal realms. I am always eager for new projects and opportunitie. A quote i love to live by " Humans greatest super power is the ability to learn" </p>
         <div class="class btn-box btns">
             <a href="#" class="btn">Read Me</a>
         </div>
